--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,8 @@ WEP_API_URL_SSR=http://localhost:4000/v1
 # WEP_API_URL_SSR=https://api-hauptstadt.wepublish.dev/v1
 
 STRIPE_PUBLISHABLE_KEY=pk_test_
-PAYMENT_SUCCESS_URL=http://localhost:3000/p/success
-PAYMENT_FAILURE_URL=http://localhost:3000/p/failure
+PAYMENT_SUCCESS_URL=http://localhost:3000/success
+PAYMENT_FAILURE_URL=http://localhost:3000/failure
 TECHNICAL_ISSUER_MAIL=support@seccom.ch
 USER_INTERACTION_OFFLINE=false
 
