integrate cf turnstile

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,7 @@ PAYMENT_SUCCESS_URL=http://localhost:3000/success
 PAYMENT_FAILURE_URL=http://localhost:3000/failure
 TECHNICAL_ISSUER_MAIL=support@seccom.ch
 USER_INTERACTION_OFFLINE=false
+CF_TURNSTILE_SITE_KEY=1x00000000000000000000AA
 
 # REDIRECT_URL=https://hauptstadt.be
 # OVERLAY_PASSWORD=TV37mhlKIX56jpW
