--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@directus/sdk": "^9.6.0",
+    "@gaviti/vue-turnstile": "^0.6.5",
     "@nuxtjs/apollo": "^4.0.1-rc.5",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/sentry": "^5.1.7",
@@ -28,9 +29,8 @@
     "graphql-tag": "^2.12.6",
     "moment": "^2.29.1",
     "nuxt": "^2.15.8",
-    "vue": "^2.6.14",
-    "vue-server-renderer": "^2.6.14",
-    "vue-template-compiler": "^2.6.14",
+    "vue": "^2.7.16",
+    "vue-server-renderer": "^2.7.16",
     "vuetify": "^2.6.1",
     "vuex-class-component": "^2.3.6"
   },
@@ -44,7 +44,7 @@
     "@types/escape-html": "^1.0.1",
     "eslint": "^8.4.1",
     "eslint-plugin-nuxt": "^3.1.0",
-    "eslint-plugin-vue": "^8.2.0",
+    "eslint-plugin-vue": "^9.32.0",
     "webpack": "^4.46.0"
   }
 }
